Finalização da atividade 2
