# server.js
@@ -4,10 +4,11 @@ import { createRequire } from 'module';
 import CourseRoutes from './routes/CourseRoute.js';
 const require = createRequire(import.meta.url)
 const outputJson = require('./swagger-output.json')
-
+import MatriculaRoutes from './routes/MatriculaRoute.js';
 const app = express();
 app.use(express.json());
 app.use('/Course', CourseRoutes);
+app.use('/Matricula', MatriculaRoutes);
 app.use('/docs', swaggerUi.serve, swaggerUi.setup(outputJson))
 
 app.listen(5000, () => {
